flyweb/css/style.css
/*GENERAL CSS*/
:root {
    --primary  : #0a3150;
    --secondary: #FF8C00;
    --secondary_lighter: #ff9e14;
    --secondaty_lighter2: #ffd394;
    --primary_ligher: #1B88E0;
}

* {
    padding: 0em;
    margin : 0em;
    line-height: 1.5em;
    font-family: 'Roboto' ,sans-serif, Arial, Helvetica, sans-serif;
}

body {
    /* font-family: 'Lato'; */
    /* max-width       : 70rem; */
    max-width          : 1024px;
    margin             : auto;
    height             : 100%;
    width              : 100%;
    background-color   : #fff;
    color              : #0a3150;

}

label{
    display: block;
}

p{
    font-size: 16px;
}

strong{
    font-weight: 900;
}

label, legend{
    font-weight: bolder;
    font-size: 18px;
}
input,a{
    font-size: 16px;
    cursor: pointer;
}

input[type="text"], input[type="date"], textarea{
    cursor: text;
}

button a{
    display: block;
    width: 100%;
}
.aiuti-alla-navigazione{
    position: absolute;
    height: 1px;
    width: 1px;
    overflow: hidden;
    clip: rect(1px, 1px, 1px, 1px);
}

.azzera-altezza{
    height: 0px;
    width: 0;
}


/* ===  BREADCRUMB === */
.breadcrumb{
    color: #fff;
    background-color: #0a3150;
    padding: 0.2em 0em 0.2em 0em;
    width: 100%;
    order: 2;
}

.breadcrumb p{
    margin: 0 0 0 1em;
}

.breadcrumb a{
    color: #fff;
}



/* === RESPONSE MESSAGE === */
.response-message{
    min-width: 100%;
    text-align: center;
    margin-top: 2em;
    margin-bottom: 2em;
    order: 3;
}
.response-img{
    width: 25vw;
    margin: 0 auto;
    display: block;
}

/* === ERROR BOX === */
.error-box{
    width: 100%;
    text-align: center;
    color: #ff0000;
}

.error-box ul{
    list-style-type: none;
    text-align: center;
}

.error-box ul li{
    width: 100%;
    text-align: center;
}

/* === LAYOUT index.html ===*/
.contenuto-home{
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    justify-content: space-between;
}

.contenuto-home .main-menu{
    order: 1;
}

.contenuto-home .breadcrumb{
    order: 2;
}

.contenuto-home .content-search-box{
    order: 3;
    padding-top: 2em;
    padding-bottom: 7em;
    background-color: #ffd394;
}

.contenuto-home .boxSuggerimenti{
    order: 4;
    background-color: #d7ecff;
    padding: 2em 0 6em 0;
}

.contenuto-home .footer{
    order: 5;
}
/* === SUGGERIMENTI ===*/

.boxSuggerimenti {
    text-align: center;
    padding-bottom: 2em;
    padding-top: 1em;
}

.boxSuggerimenti li {
    list-style-type : none;
    display         : inline-flex;
    vertical-align  : bottom;
    height: 11em;
    width: 10em;
    margin: 1em;
}

.boxSuggerimenti a {
    height         : 100%;
    width          : 100%;
}

.boxSuggerimenti h3 {
    text-transform  : uppercase;
    font-size       : 100%;
}

.generalBackground {
    background-size: 10em 10em;

}

.img-suggerimenti{
    height: 100%;
    width: 100%;
    border-radius: 10%;
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

.img-suggerimenti:hover{
    opacity: 0.8;
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

/* === DASHBOARD board.html === */
.board-flex-container{
    display: flex;
    flex-flow: row wrap;
    align-items: stretch;
    background-color:#fff;
    width: 100%;
    padding: 0;
}

.board-menu{
    width: 30%;
    order: 1;
    background-color: #0a3150;
    text-align: center;
}

.board-contenuto{
    width: 70%;
    order: 2;
    margin:auto;
    margin-top: 0;
}
.board-contenuto .page-selector{
    background-color: #fff;
}
.board-contenuto ul{
    padding-top: 1em;
}
.board-flex-container .footer{
    order:3;
}

/* === DASHBOARD MESSAGGIO INIZIALE === */
.messaggio-dashborad{
    max-width: 100%;
    text-align: center;
    margin: 0 auto;

}
/* === DASHBOARD MENU === */

.menu-dashboard{
    background-color: #0a3150;
    text-align: center;
    min-height: 100%;
}

.board-menu .mm-logo{
    width: 100%;
    display: block;
    float: none;
    margin-bottom: 1em;
    background-color: #0a3150;
}


.menu-dash-element{
    background-color: #fff;
    border: 3px solid #fff;
    list-style-type: none;
    border-radius: 5px;
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
    margin: 0 auto;
    padding: 0;
    margin-top: 2em;
    margin-bottom: 2em;
    width: 90%;
    display: block;
}

.menu-dash-element:hover{
    background-color: #FF8C00;
    border: 3px solid #FF8C00;
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

.menu-dash-element-selected{
    cursor: none;
    text-decoration: none;

}

.menu-dash-element a{
    margin: 0; 
    display: block; 
    width: 100%; 
    min-height: 100%; 
    max-height: 100%;
    padding: 1em 0 1em 0;
}

.menu-dash-element span{
    margin: 0; 
    display: block; 
    width: 100%; 
    min-height: 100%; 
    max-height: 100%;
    padding: 1em 0 1em 0;
}

/* === DASHBOARD FORM === */
.dash-form{
    border-color: #0a3150;
    color: #0a3150;
    width: 75%;
    margin:auto;
    margin-top: 1em;
    margin-bottom: 3em;
}

.dash-form fieldset{
    display: block;
    margin: 1.0em auto;
    text-align: center;
    border-radius: 5px;
}

.dash-form fieldset{
    padding: 0;
    text-align: left;
}

.input{
    width: 90%;
    padding: 12px 20px 10px 10px;
    margin: 5px 0;
    border: 2px solid #aaa;
    border-radius: 5px;
    resize: none;
    margin-bottom: 1.5em;
    color: #0a3150;
}

.dash-form .input{
    width: 90%;
}

.input:hover{
    background-color: #f5f9ff;
    border: 2px solid #0a3150;
}

.dash-form .input-date{
    cursor: text;
    text-align: center;
}

.input:focus, .input:active{
    border: 2px solid #0a3150;
    background-color: #E9EBEE;
    outline: none;
    box-shadow: none;
}

input[type=number]{
    -moz-appearance: textfield;
}

input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button {  
    -webkit-appearance: none;
    margin: 0;
}
/* ... */

